update order file

--- a/ecommerce-backend/api/product/models/product.settings.json
+++ b/ecommerce-backend/api/product/models/product.settings.json
@@ -43,7 +43,7 @@
       "via": "products"
     },
     "orders": {
-      "via": "products",
+      "via": "product",
       "collection": "order"
     }
   }
