--- a/ecommerce-backend/extensions/users-permissions/models/User.settings.json
+++ b/ecommerce-backend/extensions/users-permissions/models/User.settings.json
@@ -59,13 +59,12 @@
       "plugin": "users-permissions",
       "configurable": false
     },
-    "wallet": {
-      "via": "user",
-      "model": "wallet"
-    },
     "order": {
       "via": "user",
       "model": "order"
+    },
+    "balance": {
+      "type": "decimal"
     }
   }
 }
