--- a/ecommerce-backend/api/order/models/order.settings.json
+++ b/ecommerce-backend/api/order/models/order.settings.json
@@ -26,10 +26,9 @@
     "total_price": {
       "type": "decimal"
     },
-    "products": {
-      "collection": "product",
-      "via": "orders",
-      "dominant": true
+    "product": {
+      "model": "product",
+      "via": "orders"
     },
     "user": {
       "plugin": "users-permissions",
